fix(kit): fixed label text align for input files

--- a/projects/kit/components/input-files/input-files.style.less
+++ b/projects/kit/components/input-files/input-files.style.less
@@ -126,3 +126,7 @@ tui-input-files {
         background: var(--tui-secondary-hover);
     });
 }
+
+.t-label {
+    text-align: center;
+}
